[workspace]
members = ["crates/enact", "crates/enact-core"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
flexi_logger = "0.31.8"
glob = "0.3.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tempfile = "3.27.0" # dev-dependencies
thiserror = "2.0.18"
yaml_serde = "0.10.4"
