[package]
name = "enact-core"
description = "GitHub Actions runner emulator core library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
glob.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
yaml_serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
